--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="css/style.css">
     <title>
         JS Documentation
     </title>
@@ -11,32 +12,32 @@
     <nav id="navbar">
         <header>JS Documentation</header>
         <ul>
-            <li><a class="nav-link" href="#Introduction">Introduction</a></li>
+            <li><a class="nav-link" href="#Introduction"><strong>Introduction</strong></a></li>
             <li>
-                <a class="nav-link" href="#What_you_should_already_know">What you should already know</a
+                <a class="nav-link" href="#What_you_should_already_know"><strong>You should already know</strong></a
             >
           </li>
           <li>
-            <a class="nav-link" href="#JavaScript_and_Java">JavaScript and Java</a>
+            <a class="nav-link" href="#JavaScript_and_Java"><strong>JavaScript and Java</strong></a>
             </li>
-            <li><a class="nav-link" href="#Hello_world">Hello world</a></li>
-            <li><a class="nav-link" href="#Variables">Variables</a></li>
+            <li><a class="nav-link" href="#Hello_world"><strong>Hello world</strong></a></li>
+            <li><a class="nav-link" href="#Variables"><strong>Variables</strong></a></li>
             <li>
-                <a class="nav-link" href="#Declaring_variables">Declaring variables</a>
+                <a class="nav-link" href="#Declaring_variables"><strong>Declaring variables</strong></a>
             </li>
-            <li><a class="nav-link" href="#Variable_scope">Variable scope</a></li>
-            <li><a class="nav-link" href="#Global_variables">Global variables</a></li>
-            <li><a class="nav-link" href="#Constants">Constants</a></li>
-            <li><a class="nav-link" href="#Data_types">Data types</a></li>
+            <li><a class="nav-link" href="#Variable_scope"><strong>Variable scope</strong></a></li>
+            <li><a class="nav-link" href="#Global_variables"><strong>Global variables</strong></a></li>
+            <li><a class="nav-link" href="#Constants"><strong>Constants</strong></a></li>
+            <li><a class="nav-link" href="#Data_types"><strong>Data types</strong></a></li>
             <li>
-                <a class="nav-link" href="#if...else_statement">if...else statement</a>
+                <a class="nav-link" href="#if...else_statement"><strong>if...else statement</strong></a>
             </li>
-            <li><a class="nav-link" href="#while_statement">while statement</a></li>
+            <li><a class="nav-link" href="#while_statement"><strong>while statement</strong></a></li>
             <li>
-                <a class="nav-link" href="#Function_declarations">Function declarations</a
+                <a class="nav-link" href="#Function_declarations"><strong>Function declarations</strong></a
             >
           </li>
-          <li><a class="nav-link" href="#Reference">Reference</a></li>
+          <li><a class="nav-link" href="#Reference"><strong>Reference</strong></a></li>
         </ul>
     </nav>
     <main id="main-doc">
